--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
     "nodemon": "^2.0.4"
   },
   "browserslist": [
