--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "server": "nodemon --watch server server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test-server": "jest --forceExit server/*.test.js",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "supertest": "^6.1.6"
   },
   "browserslist": [
     ">0.2%",
